# texture-packer

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: Config.cpp  Config.h  File.cpp  File.h  Image.cpp  ImageList.cpp  ImageList.h  ImageSaver.cpp  Log.cpp  Trim.h  Utils.cpp  Utils.h  main.cpp
src/Atlas/: AtlasPacker.cpp  AtlasPacker.h  AtlasSize.cpp  AtlasSize.h  KDNode.cpp  KDNode.h  KDTreePacker.cpp  KDTreePacker.h  SimplePacker.cpp  SimplePacker.h
src/Types/: Bitmap.cpp  Bitmap.h  Types.h
tests/: verify.sh
tests/verify/reference/: bordered.xml  classic.xml  multi.xml  pot.xml  single.xml
